deploy-web-app-to-aws/2_waf-alb-ecs/template.yml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Configuration
      Parameters:
      - ApplicationName
      - Enviroment
      - AllowSourceIp
      - VpcCIDR
      - PublicSubnet1CIDR
      - PublicSubnet2CIDR
      - ProtectedSubnet1CIDR
      - ProtectedSubnet2CIDR

Parameters:
  ApplicationName:
    Description: Please specify the application name of the resource
    Type: String
    Default: web-app-on-waf-alb-ecs

  Enviroment:
    Description: Please specify the environment of the resource
    Type: String
    Default: dev

  AllowSourceIp:
    Description: Required. Please specify the Ip to allow access to the ai text search service.
    Type: String

  VpcCIDR:
    Description: Please specify the application name of the resource
    Type: String
    Default: 192.168.0.0/24

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 192.168.0.0/27

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 192.168.0.32/27

  ProtectedSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 192.168.0.64/27

  ProtectedSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 192.168.0.96/27

Resources:

  ###################################################
  ## VPC
  ###################################################

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      Tags:
      - Key: Name
        Value: !Sub ${ApplicationName}-${Enviroment}-vpc

  ###################################################
  ## PublicSubnet
  ###################################################

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref PublicSubnet1CIDR
      Tags:
      - Key: Name
        Value: !Sub ${ApplicationName}-${Enviroment}-public-subnet-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref PublicSubnet2CIDR
      Tags:
      - Key: Name
        Value: !Sub ${ApplicationName}-${Enviroment}-public-subnet-1c

  ###################################################
  ## IGW
  ###################################################

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Sub ${ApplicationName}-${Enviroment}-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  ###################################################
  ## RouteTable for PublicSubnet
  ###################################################

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub rtb-${ApplicationName}-${Enviroment}-public-subnet

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  ###################################################
  ## ProtectedSubnet related resources
  ###################################################

  ProtectedSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: !Ref ProtectedSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-${Enviroment}-protected-subnet-1a

  ProtectedSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: !Ref ProtectedSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-${Enviroment}-protected-subnet-1c

  ###################################################
  ## NGW
  ###################################################

  NatGatewayEIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-${Enviroment}-ngw-eip

  NatGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${ApplicationName}-${Enviroment}-ngw

  ###################################################
  ## RouteTable for ProtectedSubnet
  ###################################################

  ProtectedRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub rtb-${ApplicationName}-${Enviroment}-protected-subnet

  ProtectedSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ProtectedRouteTable
      SubnetId: !Ref ProtectedSubnet1

  ProtectedSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ProtectedRouteTable
      SubnetId: !Ref ProtectedSubnet2

  DefaultProtectedRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref ProtectedRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  ###################################################
  ## WAF
  ###################################################
  WebACL:
    Type: AWS::WAFv2::WebACL
    Properties:
      Name: !Sub ${ApplicationName}-${Enviroment}-web-acl
      DefaultAction:
        Allow: {}
      Scope: REGIONAL
      VisibilityConfig:
        SampledRequestsEnabled: true
        CloudWatchMetricsEnabled: true
        MetricName: !Sub ${ApplicationName}-${Enviroment}-web-acl
      Rules:
        -
          Name: AWS-AWSManagedRulesCommonRuleSet
          Priority: 1
          Statement:
            ManagedRuleGroupStatement:
              VendorName: AWS
              Name: AWSManagedRulesCommonRuleSet
          OverrideAction:
            None: {}
          VisibilityConfig:
            CloudWatchMetricsEnabled: true
            SampledRequestsEnabled: true
            MetricName:  AWS-AWSManagedRulesCommonRuleSet

  ###################################################
  ## Web ACL Association for WAF
  ###################################################
  WebACLAssociation:
    Type: AWS::WAFv2::WebACLAssociation
    Properties:
      ResourceArn: !Ref  ApplicationLoadBalancer
      WebACLArn: !GetAtt WebACL.Arn

  ###################################################
  ## Security Group for ALB
  ###################################################

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ApplicationName}-${Enviroment}-alb-sg
      GroupDescription: Security group for alb
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: !Ref AllowSourceIp
        Description: Allow HTTP traffic from the alb
      SecurityGroupEgress:
      - IpProtocol: -1
        CidrIp: '0.0.0.0/0'
        Description: Allow all outbound traffic

  ###################################################
  ## ALB
  ###################################################

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub ${ApplicationName}-${Enviroment}-alb
      Scheme: internet-facing
      SecurityGroups:
      - !Ref ALBSecurityGroup
      Subnets:
      - !Ref PublicSubnet1
      - !Ref PublicSubnet2
      Type: application

  TargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub ${ApplicationName}-${Enviroment}-tg
      Port: 8000
      Protocol: HTTP
      VpcId: !Sub ${VPC}
      TargetType: ip
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: 'true'
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 43200

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - TargetGroupArn: !Ref 'TargetGroup'
          Order: 1
          Type: "forward"

  ###################################################
  ## Security Group for ECS
  ###################################################

  ECSSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub ${ApplicationName}-${Enviroment}-ecs-sg
      GroupDescription: 'Security group for ecs'
      VpcId: !Sub ${VPC}
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8000'
          ToPort: '8000'
          SourceSecurityGroupId: !Ref ALBSecurityGroup
          Description: 'Allow HTTP traffic from the alb'
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: 'Allow all outbound traffic'

  ###################################################
  ## CloudWatch Logs for ECS
  ###################################################

  EcsServiceLogs:
    Type: 'AWS::Logs::LogGroup'
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Properties:
      LogGroupName: !Sub "/aws/ecs/${ApplicationName}-${Enviroment}-ecs-service"
      RetentionInDays: 30

  ###################################################
  ## IAM for ECS TaskExecutionRole
  ###################################################

  EcsTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub '${ApplicationName}-${Enviroment}-ecs-task-execution-role'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  ###################################################
  ## IAM for ECS ServiceRole
  ###################################################

  EcsServiceRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: !Sub '${ApplicationName}-${Enviroment}-ecs-service-role'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: 'Allow'
            Principal:
              Service:
                - 'ecs-tasks.amazonaws.com'
            Action:
              - 'sts:AssumeRole'
      Path: '/'
      Policies:
        - PolicyName: !Sub '${ApplicationName}-${Enviroment}-ecs-service-policy'
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Sid: "CloudWatchLogsScopedAccess"
                Effect: "Allow"
                Action:
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                Resource:
                  - !GetAtt EcsServiceLogs.Arn
              - Sid: "DynamoDBScopedAccess"
                Effect: "Allow"
                Action:
                  - "dynamodb:*"
                Resource:
                  - !GetAtt TodoTable.Arn

  ###################################################
  ## ECR for ECS
  ###################################################

  ECRRepository:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: !Sub "${ApplicationName}-${Enviroment}-ecr-repository"

  ###################################################
  ## ECS
  ###################################################

  ECSCluster:
    Type: 'AWS::ECS::Cluster'
    Properties:
      ClusterName: !Sub "${ApplicationName}-${Enviroment}-ecs-cluster"

  ECSTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      ContainerDefinitions:
        - Name: !Sub "${ApplicationName}-${Enviroment}-container"
          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ECRRepository}:latest'
          Essential: true
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Sub "/aws/ecs/${ApplicationName}-${Enviroment}-ecs-service"
              awslogs-stream-prefix: ecs
              awslogs-region: !Sub ${AWS::Region}
          PortMappings:
            - ContainerPort: 8000
              HostPort: 8000
              Protocol: tcp
          Environment:
            - Name: TODO_TABLE
              Value: !Ref TodoTable
      Family: !Sub "${ApplicationName}-${Enviroment}-task-definition"
      Cpu: 1024
      Memory: 2048
      TaskRoleArn: !GetAtt EcsServiceRole.Arn
      ExecutionRoleArn: !GetAtt EcsTaskExecutionRole.Arn
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      RuntimePlatform:
        OperatingSystemFamily: LINUX

  ECSService:
    Type: 'AWS::ECS::Service'
    DependsOn: LoadBalancerListener
    Properties:
      ServiceName: !Sub "${ApplicationName}-${Enviroment}-ecs-service"
      Cluster: !Ref ECSCluster
      DesiredCount: 0
      LoadBalancers:
        - TargetGroupArn: !Ref TargetGroup
          ContainerName: !Sub "${ApplicationName}-${Enviroment}-container"
          ContainerPort: 8000
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !Ref ECSSecurityGroup
          Subnets:
            - !Ref ProtectedSubnet1
            - !Ref ProtectedSubnet2
      TaskDefinition: !Ref ECSTaskDefinition

  ###################################################
  ## DynamoDB
  ###################################################

  TodoTable:
    Type: AWS::DynamoDB::Table
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      TableName: !Sub "${ApplicationName}-${Enviroment}-todo-table"
      AttributeDefinitions:
        - AttributeName: TodoID
          AttributeType: S
      KeySchema:
        - AttributeName: TodoID
          KeyType: HASH
      ProvisionedThroughput:
        ReadCapacityUnits: 5
        WriteCapacityUnits: 5

Outputs:
  ALBFQDN:
    Description: The FQDN of the ALB
    Value: !GetAtt ApplicationLoadBalancer.DNSName
